--- a/config.yml
+++ b/config.yml
@@ -5,3 +5,10 @@ listen:
   type: port
   bind_ip: 127.0.0.1
   port: 8080
+storage:
+  username: postgres
+  password: test
+  host: localhost
+  port: 5432
+  database_name: test
+  maxAttempts: 5
